/*
 * $Id: ChangeLog,v 1.1058 2003/05/26 15:46:28 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-05-26 18:35 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpccli.prg
    ! Moved nTcpPort and nUdpPort to non-hidden scope
    + Added nUdpPort and nTcpPort as initialization parameters

2003-05-26 17:46 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/macro/Makefile
    + Added creation of macromt lib (in UNIX).

  * tests/Makefile
    + Added -lmacromt in MT compilation of tests

  * tests/mtgc.prg
    + Added a MT test for macro compilation

2003-05-26 07:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added logic to release szModuleName in hb_ReleaseLocalSymbols()

2003-05-26 10:05 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
    + source/codepage/cdpplwin.c

2003-05-26 15:30 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  + xharbour/source/codepage/cdpplwin.c
  * xharbour/source/codepage/Makefile
    + new Polish codepage PLWIN - CP1250 based

  * xharbour/source/codepage/Makefile
  * xharbour/source/rtl/gtcrs/gtcrs.c
  * xharbour/source/rtl/gtcrs/gtcrs.h
  * xharbour/source/rtl/gtcrs/hb-charmap.def
    * minor corrections

  + xharbour/xhbgtmk.sh
    + This script checks you have all tools to build xHarbour binaries
      installed then takes current xHarbour sources from SourceForge CVS
      and build binaries RPMs at your local host
    To xHarbour www manger: Can you put this script somewhere on
    www.xHarbour.org? I think many Linux users find it interesting.

2003-05-26 09:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * contrib/rdd_ads/ads1.c
    * cast at 1617

2003-05-26 01:30 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/pp/ppcore.c
    - local ifou (unused) at 1575
  * source/rtl/win32ole.prg