@@ -1,5 +1,5 @@
 /*
- * $Id: memoline.c,v 1.2 2001/12/30 01:21:49 ronpinkas Exp $
+ * $Id: memoline.c,v 1.3 2002/01/03 03:53:45 ronpinkas Exp $
  */
 
 /*
@@ -180,3 +180,132 @@ HB_FUNC( MEMOLINE )
    }
 }
 
+#ifndef HB_C52_STRICT
+
+HB_FUNC( MEMOLINELONG )
+{
+   char * pszString    = ISCHAR( 1 ) ? hb_parc( 1 ) : "";
+   ULONG  ulLineLength = ISNUM( 2 ) ? hb_parni( 2 ) : 79;
+   ULONG  ulLineNumber = ISNUM( 3 ) ? hb_parni( 3 ) : 1;
+   ULONG  ulTabLength  = ISNUM( 4 ) ? hb_parni( 4 ) : 4;
+   ULONG  ulLastSpace  = 0;
+   ULONG  ulCurLength  = 0;
+   BOOL   bWordWrap    = ISLOG( 5 ) ? hb_parl( 5 ) : TRUE;
+   ULONG  ulLen        = hb_parclen( 1 );
+   ULONG  ulLines      = 0;
+   ULONG  ulPos        = 0;
+   ULONG  ulLineBegin;
+   ULONG  ulLineEnd;
+
+   if( ulLineLength < 4 )
+      ulLineLength = 79;
+
+   if( ulTabLength > ulLineLength )
+      ulTabLength = ulLineLength - 1;
+
+   ulLineBegin = ulPos;
+   ulLineEnd   = 0;
+
+
+   while( ulPos < ulLen && ulLines < ulLineNumber )
+   {
+      switch( pszString[ ulPos ] )
+      {
+         case HB_CHAR_HT:
+            ulCurLength = ( ( ULONG ) ( ulCurLength / ulTabLength ) * ulTabLength ) + ulTabLength;
+            ulLastSpace = ulCurLength;
+            break;
+
+         case HB_CHAR_LF:
+            ulCurLength = 0;
+            ulLastSpace = 0;
+            ulLineEnd = ( ulPos >= OS_EOL_LEN ) ? ( ulPos - OS_EOL_LEN ) : ulLineBegin;
+            ulLines++;
+            if( ulLines < ulLineNumber )
+            {
+               ulLineBegin = ulPos + 1;
+               ulLineEnd   = 0;
+            }
+            break;
+
+         case HB_CHAR_CR:
+            break;
+
+         case ' ':
+            ulCurLength++;
+            ulLastSpace = ulCurLength;
+            break;
+
+         default:
+            ulCurLength++;
+      }
+
+      if( ulCurLength > ulLineLength )
+      {
+         if( bWordWrap )
+         {
+            if( ulLastSpace == 0 || ulLastSpace == ulCurLength )
+            {
+               ulCurLength = 1;
+               ulLineEnd   = ulPos - 1;
+            }
+            else
+            {
+               ulCurLength = ulCurLength - ulLastSpace;
+               ulLineEnd   = ulPos - ulCurLength ;
+            }
+         }
+         else
+         {
+            ulCurLength = 1;
+            ulLineEnd   = ulPos - 1;
+         }
+
+         ulLines++;
+         ulLastSpace = 0;
+
+         if( ulLines < ulLineNumber )
+         {
+            ulLineBegin = ulPos - ulCurLength + 1;
+            ulLineEnd   = 0;
+         }
+      }
+
+      ulPos++;
+   }
+
+   if( ulLineEnd == 0 )
+   {
+      ulLines++;
+      ulLineEnd = ( ulPos == 0 ) ? 0 : ( ulPos - 1 );
+   }
+
+   if( ulPos < ulLen || (ulLineNumber == ulLines && ulLineEnd >= ulLineBegin) )
+   {
+      ULONG ulSpAdded = 0;
+      char * pszLine = ( char * ) hb_xgrab( ulLineLength + 1 );
+
+      memset( pszLine, ' ', ulLineLength );
+
+      if ( ulLineEnd >= ulLineBegin && ulLen > 0 )
+      {
+         for( ulPos = 0; ulPos <= ( ulLineEnd - ulLineBegin ); ulPos++ )
+         {
+            if( pszString[ ulLineBegin + ulPos ] == HB_CHAR_HT )
+               ulSpAdded += ( ( ULONG ) ( ulPos / ulTabLength ) * ulTabLength ) + ulTabLength - ulPos - 2;
+            else
+               * ( pszLine + ulPos + ulSpAdded ) = * ( pszString + ulLineBegin + ulPos );
+
+         }
+
+      }
+
+      hb_retclenAdopt( pszLine, ulLineLength );
+   }
+   else
+   {
+      hb_retc( "" );
+   }
+}
+
+#endif
